--- a/src/components/card/card.njk
+++ b/src/components/card/card.njk
@@ -3,7 +3,7 @@
 {% macro card(card) %}
 	<article class="card">
 		<header class="card__header">
-			<h{{ (card.heading.level if card.heading.level else "4") }} class="card__heading">
+			<h{{ (card.heading.level if card.heading.level else "3") }} class="card__heading">
 				<a href="{{ card.href }}">
 					{% if card.heading.icon %}
 						<span class="card__icon icon icon--{{ card.heading.icon }}" aria-hidden="false"></span>
@@ -11,7 +11,7 @@
 
 					{{ card.heading.text }}
 				</a>
-			</h{{ card.heading.level if card.heading.level else "4" }}>
+			</h{{ card.heading.level if card.heading.level else "3" }}>
 		</header>
 		{% if card.metadata %}
 			<dl class="card__metadata">
@@ -20,7 +20,7 @@
 						<dt>
 							{{ tag({ className: "card__tag", label: card.tag.label, modifier: card.tag.modifier }) }}
 						</dt>
-						<dt class="visually-hidden">Yes</dt>
+						<dd class="visually-hidden">Yes</dd>
 					</div>
 				{% elif card.tags %}
 					{% for t in card.tags %}
@@ -28,7 +28,7 @@
 							<dt>
 								{{ tag({ className: "card__tag", label: t.label, modifier: t.modifier }) }}
 							</dt>
-							<dt class="visually-hidden">Yes</dt>
+							<dd class="visually-hidden">Yes</dd>
 						</div>
 					{% endfor %}
 				{% endif %}
