--- a/src/components/tag/_tag.scss
+++ b/src/components/tag/_tag.scss
@@ -15,7 +15,6 @@
 ///   - `--consultation`  In consultation
 /// @since 0.3.1
 .tag {
-  @include font-size(-1);
   background-color: $colour-panel-inverse;
   border-radius: em($spacing-xx-small);
   color: $colour-text-inverse;
@@ -23,7 +22,7 @@
   font-weight: normal;
   padding: em(0 $spacing-x-small);
   text-decoration: none;
-  vertical-align: text-bottom;
+  vertical-align: baseline;
 
   @media print {
     @include important(background, none);
