--- a/src/components/tag/_tag.scss
+++ b/src/components/tag/_tag.scss
@@ -25,8 +25,10 @@
   vertical-align: baseline;
 
   @media print {
-    @include important(background, none);
-    @include important(color, $colour-true-black);
+    // sass-lint:disable-block no-important
+    background: none !important;
+    color: $colour-true-black !important;
+    padding: 0 !important;
   }
 
   &--impact {
