Update sample quote contents

--- a/server/views/components/quote.njk
+++ b/server/views/components/quote.njk
@@ -9,11 +9,13 @@
 
 		<blockquote class="quote">
 			<p>
-				We do the right work in the right way at NICE. We mix content, dev, design and research at the start to solve user problems. We produce things quickly, get data and refine.
+				Be excellent to each other.
+				<br/>
+				And, party on dudes!
 			</p>
 			<footer>
 				<cite>
-					<strong>Dafydd - Content Team</strong>
+					<strong>Abraham Lincoln</strong>
 				</cite>
 			</footer>
 		</blockquote>
