Update design system to 0.3.3

--- a/_includes/alpha.html
+++ b/_includes/alpha.html
@@ -1,7 +1,7 @@
 <div class="container">
 	<p class="phase-banner">
 		<span class="phase-banner__tag">
-			<strong class="phase-tag phase-tag--alpha">ALPHA</strong>
+			<span class="tag tag--impact tag--alpha">Alpha</span>
 		</span>
 		<span class="phase-banner__label">
 			{{ site.product_name }} is in development. This means it is not feature complete and there may be issues. Find any? Please, <a href="{{ site.repository }}/issues" target="_blank" rel="noopener external">let us know</a>!
