--- a/server/views/components/tag.njk
+++ b/server/views/components/tag.njk
@@ -20,6 +20,7 @@
 			<li>Live {{ tag({ label: "Live", modifier: "live" }) }}</li>
 			<li>Impact {{ tag({ label: "Impact", modifier: "impact" }) }}</li>
 			<li>Impact alpha {{ tag({ label: "Alpha", modifiers: ["impact", "alpha"] }) }}</li>
+			<li>Flush {{ tag({ label: "Flush (no margin)", modifier: "flush" }) }}</li>
 		</ul>
 
 	</div>
