--- a/server/views/pages/topic-landing-page.njk
+++ b/server/views/pages/topic-landing-page.njk
@@ -104,7 +104,7 @@
 
 				<ul class="list list--unstyled">
 					<li>
-						{{ card({ heading: { text: "Advanced breast cancer: diagnosis and treatment (CG81)" }, href: "https://www.nice.org.uk/guidance/cg81", tag: { modifier: "updated", label: "Updated" }, metadata: [ { key: "Published date", value: "February 2009", datetime: "2009-02" }, { key: "Last updated", value: "August 2017", datetime: "2017-08" } ] }) }}
+						{{ card({ heading: { text: "Advanced breast cancer: diagnosis and treatment (CG81)" }, href: "https://www.nice.org.uk/guidance/cg81", tag: { modifiers: ["updated", "flush"], label: "Updated" }, metadata: [ { key: "Published date", value: "February 2009", datetime: "2009-02" }, { key: "Last updated", value: "August 2017", datetime: "2017-08" } ] }) }}
 					</li>
 					<li>
 						{{ card({ heading: { text: "Early and locally advanced breast cancer: diagnosis and treatment (CG80)" }, href: "https://www.nice.org.uk/guidance/cg80", metadata: [ { key: "Published date", value: "February 2009", datetime: "2009-02" } ] }) }}
@@ -116,7 +116,7 @@
 						{{ card({ heading: { text: "Improving outcomes in breast cancer (CSG1)" }, href: "https://www.nice.org.uk/guidance/csg1", metadata: [ { key: "Published date", value: "August 2002", datetime: "2012-10" } ] }) }}
 					</li>
 					<li>
-						{{ card({ heading: { text: "Suspected cancer: recognition and referral (NG12)" }, href: "https://www.nice.org.uk/guidance/ng12", tag: { modifier: "updated", label: "Updated" }, metadata: [ { key: "Published date", value: "June 2015", datetime: "2015-06" }, { key: "Last updated", value: "July 2017", datetime: "2017-07" } ] }) }}
+						{{ card({ heading: { text: "Suspected cancer: recognition and referral (NG12)" }, href: "https://www.nice.org.uk/guidance/ng12", tag: { modifiers: ["updated", "flush"], label: "Updated" }, metadata: [ { key: "Published date", value: "June 2015", datetime: "2015-06" }, { key: "Last updated", value: "July 2017", datetime: "2017-07" } ] }) }}
 					</li>
 				</ul>
 
@@ -138,7 +138,7 @@
 						{{ card({ heading: { text: "EndoPredict gene expression profiling assay for assessing risk of breast cancer recurrence (MIB44)" }, href: "https://www.nice.org.uk/advice/mib44", metadata: [ { key: "Published date", value: "November 2015", datetime: "2015-11" } ] }) }}
 					</li>
 					<li>
-						{{ card({ heading: { text: "L-Dex U400 for lymphoedema after breast cancer treatment (MIB111)" }, href: "https://www.nice.org.uk/advice/mib111", tag: { modifier: "new", label: "New" }, metadata: [ { key: "Published date", value: "July 2017", datetime: "2017-07" } ] }) }}
+						{{ card({ heading: { text: "L-Dex U400 for lymphoedema after breast cancer treatment (MIB111)" }, href: "https://www.nice.org.uk/advice/mib111", tag: { modifiers: ["new", "flush"], label: "New" }, metadata: [ { key: "Published date", value: "July 2017", datetime: "2017-07" } ] }) }}
 					</li>
 					<li>
 						{{ card({ heading: { text: "The Prosigna gene expression profiling assay for assessing long‑term risk of breast cancer recurrence (MIB27)" }, href: "https://www.nice.org.uk/advice/mib27", metadata: [ { key: "Published date", value: "March 2015", datetime: "2015-03" } ] }) }}
@@ -149,7 +149,7 @@
 
 				<ul class="list list--unstyled">
 					<li>
-						{{ card({ heading: { text: "The Prosigna gene expression profiling assay for assessing long‑term risk of breast cancer recurrence (MIB27)" }, href: "https://www.nice.org.uk/advice/mib27", tags: [{ modifier: "consultation", label: "In consultation" }, { modifier: "new", label: "New" }], metadata: [ { key: "Published date", value: "March 2015", datetime: "2015-03" } ] }) }}
+						{{ card({ heading: { text: "The Prosigna gene expression profiling assay for assessing long‑term risk of breast cancer recurrence (MIB27)" }, href: "https://www.nice.org.uk/advice/mib27", tags: [{ modifiers: ["consultation", "flush"], label: "In consultation" }, { modifiers: ["new", "flush"], label: "New" }], metadata: [ { key: "Published date", value: "March 2015", datetime: "2015-03" } ] }) }}
 					</li>
 				</ul>
 
