--- a/src/components/card/_card.scss
+++ b/src/components/card/_card.scss
@@ -45,15 +45,14 @@
 
   &__tag {
     @include font-size(-1);
-    margin-bottom: 0 !important; // sass-lint:disable-line no-important
-    margin-right: em($spacing-x-small);
+    margin-right: rem($spacing-x-small);
   }
 
   &__metadata {
     @include font-size(-1);
     color: $colour-nice-dark-grey;
     display: inline-block;
-    margin: em($spacing-x-small 0 0);
+    margin: rem($spacing-x-small 0 0);
     position: relative;
     z-index: 1;
   }
