--- a/src/components/tag/_tag.scss
+++ b/src/components/tag/_tag.scss
@@ -13,6 +13,7 @@
 ///   - `--new`  New
 ///   - `--updated`  Updated
 ///   - `--consultation`  In consultation
+///   - `--flush`  No margin
 /// @since 0.3.1
 .tag {
   background-color: $colour-panel-inverse;
@@ -65,5 +66,9 @@
 
   &--consultation {
     background: $colour-guidance-consultation;
+  }
+
+  &--flush {
+    margin-bottom: 0;
   }
 }
