Add super tag modifier

--- a/server/views/components/tag.njk
+++ b/server/views/components/tag.njk
@@ -21,7 +21,10 @@
 			<li>Impact {{ tag({ label: "Impact", modifier: "impact" }) }}</li>
 			<li>Impact alpha {{ tag({ label: "Alpha", modifiers: ["impact", "alpha"] }) }}</li>
 			<li>Flush {{ tag({ label: "Flush (no margin)", modifier: "flush" }) }}</li>
+			<li><span class="h2">Super {{ tag({ label: "Super", modifier: "super" }) }}</span></li>
 		</ul>
+
+		<h2>Tag on a heading {{ tag({ label: "Live", modifiers: ["live", "super"] }) }}</h2>
 
 	</div>
 
