--- a/server/views/index.njk
+++ b/server/views/index.njk
@@ -20,6 +20,7 @@
 					<li><a href="/components/hero/">Hero</a></li>
 					<li><a href="/components/in-page-nav/">In page nav</a></li>
 					<li><a href="/components/lists/">Lists</a></li>
+					<li><a href="/components/page-header/">Page header</a></li>
 					<li><a href="/components/panels/">Panels</a></li>
 					<li><a href="/components/phase/">Phase banners</a></li>
 					<li><a href="/components/quote/">Quote</a></li>
