In page nav improvements

--- a/server/views/components/in-page-nav.njk
+++ b/server/views/components/in-page-nav.njk
@@ -8,10 +8,11 @@
 
 		<h1>In page nav</h1>
 
-		<div class="grid">
+		<div class="grid grid--rev">
+			<div data-g="12 md:4">
+				{{ inPageNav() }}
+			</div>
 			<div data-g="12 md:8">
-
-				{{ inPageNav({ target: "in-page-nav-target" }) }}
 
 				<h2>Lorem ipsum</h2>
 
