--- a/_layouts/sidebar.html
+++ b/_layouts/sidebar.html
@@ -8,37 +8,42 @@ layout: master
 
 <div class="container">
 
+	<div class="page-header">
+		<h1 class="page-header__heading">
+			{{ page.heading | default: page.title }}
+		</h1>
+		<p class="page-header__lead">
+			{{ page.lead | default: page.description }}
+		</p>
+	</div>
+
 	<div class="page {% if page.inpagenav == false %}page--full{% endif %}">
 
 		<aside class="page__sidebar" role="complementary">
 			{% include stacked-nav.html %}	
 		</aside>
 
-		<article class="page__main" role="main">
+		<main class="page__main">
 
-			<h1>
-				{{ page.title }}
-			</h1>
+			{% unless page.inpagenav == false %}
+				<aside class="page__inpagenav" role="complementary">
+					<div data-inpagenav data-inpagenav-headings-container=".page__body"></div>
+				</aside>
+			{% endunless %}
 
-			{% if page.inpagenav == true %}
-				<div data-inpagenav data-inpagenav-headings-container="[role='main']" data-inpagenav-wide-target="in-page-nav-target"></div>
-			{% endif %}
+			<article class="page__body">
 
-			{{ content }}
+				{{ content }}
 
-			<p class="text-right">
-				<a href="{{ site.repository }}/edit/gh-pages/{{ page.path }}" target="_blank">
-					Edit on GitHub
-				</a>
-			</p>
+				<p class="text-right">
+					<a href="{{ site.repository }}/edit/gh-pages/{{ page.path }}" target="_blank">
+						Edit on GitHub
+					</a>
+				</p>
 
-		</article>
+			</article>
 
-		{% unless page.inpagenav == false %}
-		<aside class="page__inpagenav" role="complementary">
-			<div id="in-page-nav-target"></div>
-		</aside>
-		{% endunless %}
+		</main>
 
 	</div>
 </div>
