Fix bug with missing headings

--- a/_includes/section-nav.html
+++ b/_includes/section-nav.html
@@ -9,6 +9,12 @@
 {% capture indexUrl %}/{{ pageGroup.name }}/{% endcapture %}
 {% assign index = pageGroup.items | where_exp: "pg","pg.url == indexUrl" | first %}
 
+{% if include.heading %}
+## [{{ index.title }}]({{ index.url | relative_url }})
+{% endif %}
+
+{{ index.description }}
+
 {% if pageGroup.items %}
 <div class="grid">
 	{% assign pages = pageGroup.items | where_exp: "pg", "pg.url != indexUrl" %}
