Add custom modernizr build

--- a/server/views/layouts/_layout.njk
+++ b/server/views/layouts/_layout.njk
@@ -8,7 +8,7 @@
 
 	<title>{{ title }} | NICE Design System</title>
 
-	<script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
+	<script src="/javascripts/modernizr.nice.min.js"></script>
 
 	<link rel="shortcut icon" href="/favicon.ico" />
 	<link rel="stylesheet" href="/stylesheets/nice.css" type="text/css" charset="utf-8">
